--- a/css/styles.css
+++ b/css/styles.css
@@ -11411,7 +11411,7 @@ header.masthead {
   padding-bottom: 6rem;
   text-align: center;
   color: #fff;
-  background-image: url("../assets/img/frente.jpg");
+  background-image: url("https://santiagoroldan00.github.io/rogacarimg.github.io/frente.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -11793,7 +11793,7 @@ section#contact form#contactForm :-ms-input-placeholder {
 	text-decoration:none;
 	position: fixed;
 	bottom: 40px;
-	right: 40px;
+	left: 40px;
 	transition: all 300ms ease 0ms;
 	box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
 	z-index: 99;
@@ -11809,6 +11809,6 @@ section#contact form#contactForm :-ms-input-placeholder {
 		font-size: 14px;
 		padding: 12px 20px;
 		bottom: 20px;
-		right: 20px;
+		left: 20px;
 	}
 } 
